# token-ledger

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RUST-1.88-STANDARD-LIBRARY-NOTICES.html  SECURITY.md  SUPPORT.md  THIRD-PARTY-NOTICES.html  about.hbs  about.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  pricing_report.yml
.github/workflows/: ci.yml  release.yml
assets/: prices.json  prices.manifest.example.json
docs/: ARCHITECTURE.md  CRATES_IO.md  DEPENDENCIES.md  GITHUB.md  LAUNCH.md  PRICING.md  PRIVACY.md  RELEASING.md
scripts/: check-public.ps1  check.ps1  check.sh  generate-third-party-notices.ps1  package-source.ps1  render-demo-gif.ps1
src/: billing.rs  config.rs  cost.rs  db.rs  demo.rs  html.rs  lib.rs  main.rs  model.rs  pricing.rs  reconcile.rs  report.rs  scanner.rs  terminal.rs
src/adapters/: claude.rs  codex.rs  mod.rs
src/adapters/fixtures/: codex_basic.jsonl
tests/: cli.rs  cost_cli.rs  demo_cli.rs  migrate_cli.rs  prices_cli.rs  pricing_catalog.rs  reconcile_cli.rs  sqlite_runtime.rs
tests/fixtures/: anthropic_admin_usage.json  claude_sessions.jsonl  codex_rollout.jsonl  openai_organization_usage.json
