[package]
name = "token-ledger"
version = "0.4.4"
edition = "2024"
rust-version = "1.88"
description = "Local-first Claude Code and OpenAI Codex token usage ledger"
license = "MIT"
readme = "README.md"
repository = "https://github.com/DiamondNit3/token-ledger"
homepage = "https://github.com/DiamondNit3/token-ledger"
documentation = "https://docs.rs/token-ledger"
keywords = ["cli", "tokens", "cost", "claude", "codex"]
categories = ["command-line-utilities", "development-tools"]
publish = false
include = [
    "/about.hbs",
    "/about.toml",
    "/assets/**",
    "/docs/**",
    "/scripts/**",
    "/src/**",
    "/tests/**",
    "/CHANGELOG.md",
    "/CODE_OF_CONDUCT.md",
    "/CONTRIBUTING.md",
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/MUSL-1.2.3-COPYRIGHT.txt",
    "/README.md",
    "/SECURITY.md",
    "/SUPPORT.md",
    "/THIRD-PARTY-NOTICES.html",
    "/RUST-1.88-STANDARD-LIBRARY-NOTICES.html",
]

[[bin]]
name = "token-ledger"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
anstream = "1.0"
anstyle = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
chrono-tz = { version = "0.10", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.2"
csv = "1.3"
directories = "6.0"
hex = "0.4"
iana-time-zone = "0.1"
indicatif = "0.18"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.39", features = ["bundled", "chrono"] }
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
terminal_size = "0.4"
tempfile = "3.20"
toml = "1.1"
walkdir = "2.5"
zstd = "0.13"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
